# jarvis-project

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
grafana/provisioning/dashboards/: dashboard.yml  jarvis.json
k8s/: configmap.yaml  grafana.yaml  jarvis-api.yaml  jarvis-worker.yaml  kustomization.yaml  prometheus.yaml  rabbitmq.yaml  secrets.yaml  tempo.yaml
reports/: 20260531-221125-transformer-models.md  20260603-001347-tool-failure-analysis.md  jarvis.db  open_meteo_api.md  prompt_eval_audit.md  test_quality_audit.md
src/jarvis/: __init__.py  config.py  main.py
src/jarvis/agents/: base_agent.py  checkpoint.py  coder.py  consensus.py  context_inject.py  critic.py  data_analyst.py  debate.py  devops.py  executor.py  failure_coach.py  graph_extractor.py  plan_templates.py  planner.py  qa.py  registry.py  replay.py  researcher.py  step_summarizer.py  summarize.py  team_agent.py
src/jarvis/api/: access_log.py  budget.py  jobs.py  maintenance.py  metrics.py  models.py  server.py  stats.py
src/jarvis/auth/: core.py
src/jarvis/edge/: agent.py  main.py  mqtt_transport.py  sync.py
src/jarvis/evals/: feedback_analyzer.py  main.py  runner.py  suite.py  trend.py
src/jarvis/events/: autonomous_agent.py  bus.py  notifications.py  triggers.py  types.py  webhooks.py
src/jarvis/memory/: activity.py  analytics.py  annotations.py  consolidator.py  context_usage.py  digest.py  episodic.py  failures.py  feedback.py  graph.py  graph_dedup.py  notes.py  personality.py  preferences.py  sessions.py  surfacing.py  turns.py  watchlist.py
src/jarvis/models/: router.py
src/jarvis/peer/: coordinator.py  discovery.py  protocol.py
src/jarvis/prompts/: backend.md  coder.md  critic.md  data_analyst.md  devops.md  frontend.md  history.py  loader.py  manager.md  overrides.py  planner.md  qa.md  researcher.md  team_lead.md
src/jarvis/queue/: consumer.py  producer.py  worker.py
src/jarvis/scheduler/: core.py
src/jarvis/security/: approval.py  audit.py  injection.py
src/jarvis/telemetry/: tracing.py
src/jarvis/tools/: browser.py  cache.py  circuit_breaker.py  conversation_export.py  delegation.py  delegation_batch.py  markdown_export.py  memory.py  os_command.py  parallel_map.py  plan_template_tool.py  plan_tool.py  plugin_loader.py  quotas.py  registry.py  report_writer.py  retry.py  team_delegation.py  tool_config.py  url_reader.py  web_search.py
src/jarvis/training/: __init__.py  crawler.py  data_generator.py  dataset_manager.py  finetune.py  main.py  modelfile.py  tracking.py
src/jarvis/twin/: main.py  service_graph.py  system_map.py
src/jarvis/utils/: console.py
tests/: conftest.py  test_access_log.py  test_activity.py  test_agent_registry.py  test_agent_tools.py  test_analytics.py  test_audit_timeline.py  test_auth.py  test_auto_training.py  test_batch_chat.py  test_budget.py  test_cache.py  test_checkpoint.py  test_circuit_breaker.py  test_config_reload.py  test_consensus.py  test_context_compression.py  test_context_inject.py  test_critic.py  test_data_generator.py  test_dataset_manager.py  test_debate.py  test_delegation_batch.py  test_episode_browser.py  test_eval_compare.py  test_eval_schedule.py  test_eval_trend.py  test_evals.py  test_event_stream.py  test_event_wiring.py  test_events.py  test_executor.py  test_failure_coach.py  test_feedback_analyzer.py  test_finetune_pipeline.py  test_graph_dedup.py  test_graph_dedup_api.py  test_graph_export.py  test_graph_extractor.py  test_injection.py  (+58 more)
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
(+49 files in other folders)
