[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS — a local AI agent powered by Ollama, inspired by Iron Man"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "ddgs>=1.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "chromadb>=0.5",
    "playwright>=1.44",
    # Production API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.20",
    "structlog>=24.0",
    "pika>=1.3",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    # OpenTelemetry
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    # Auth
    "pyjwt>=2.8",
    # Rate limiting
    "slowapi>=0.1.9",
    # Edge agent
    "paho-mqtt>=1.6",
    # Computer vision
    "opencv-python>=4.9",
    "ultralytics>=8.0",
    # System diagnostics
    "psutil>=5.9",
]

[project.optional-dependencies]
voice = [
    "openai-whisper>=20231117",
    "pyaudio>=0.2.13",
    "numpy>=1.24",
    "pyttsx3>=2.90",
]
wake-word = [
    "pvporcupine>=3.0",
    "pyaudio>=0.2.13",
]
voice-cloud = [
    "openai-whisper>=20231117",
    "pyaudio>=0.2.13",
    "numpy>=1.24",
    "elevenlabs>=1.0",
]
vision = [
    "opencv-python>=4.9",
    "ultralytics>=8.0",
]
dashboard = [
    "streamlit>=1.35",
    "requests>=2.31",
]
docs = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "youtube-transcript-api>=0.6",
]

[project.scripts]
jarvis = "jarvis.main:main"
jarvis-api = "jarvis.api.server:main"
jarvis-worker = "jarvis.queue.worker:main"
jarvis-edge = "jarvis.edge.main:main"
jarvis-eval = "jarvis.evals.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

# ── Ruff ───────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments (FastAPI Depends)
    "SIM117", # nested with statements — sometimes clearer unrolled
    "RUF012", # mutable class attributes — false positives on dataclasses
]

[tool.ruff.lint.isort]
known-first-party = ["jarvis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ───────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true
exclude = [
    "src/jarvis/voice/",
    "src/jarvis/vision/",
    "src/jarvis/edge/",
]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/jarvis"]
omit = [
    "src/jarvis/voice/*",
    "src/jarvis/vision/*",
    "src/jarvis/edge/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
